--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,15 @@ billiard==3.5.0.2
 celery==4.0.2
 cryptography==1.8.2
 Django==1.11.1
+django-autoslug==1.9.3
+django-cities-light==3.3.0
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
 django-extensions==1.7.9
 django-filter==1.0.4
 django-formtools==2.0
 django-modeltranslation==0.12.1
+django-ordered-model==1.4.1
 django-otp==0.3.14
 django-phonenumber-field==1.3.0
 django-rainbowtests==0.6.0
@@ -28,11 +31,9 @@ kombu==4.0.2
 Markdown==2.6.8
 microsofttranslator==0.8
 pep8==1.7.0
-pexpect==4.2.1
 phonenumberslite==8.5.0
-pickleshare==0.7.4
 polib==1.0.8
-prompt-toolkit==1.0.14
+progressbar2==3.30.2
 psycopg2==2.7.1
 ptyprocess==0.5.1
 py==1.4.34
@@ -43,12 +44,10 @@ pytest-flakes==2.0.0
 pytest-pep8==1.0.6
 pytest-xdist==1.18.0
 python-dateutil==2.6.0
+python-utils==2.1.0
 pytz==2017.2
 qrcode==4.0.4
-simplegeneric==0.8.1
 sqlparse==0.2.3
-traitlets==4.3.2
 Unidecode==0.4.20
 vine==1.1.3
-wcwidth==0.1.7
 Werkzeug==0.12.2
