--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = billing.settings
 python_files = tests.py test_*.py *_tests.py
+addopts = -s
 pep8ignore =
     */migrations/* ALL
     node_modules/* ALL
