--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ billiard==3.5.0.2
 celery==4.0.2
 cryptography==1.8.2
 Django==1.11.1
+django-adminactions==1.5
 django-autoslug==1.9.3
 django-cities-light==3.3.0
 django-crispy-forms==1.6.1
@@ -48,6 +49,9 @@ python-utils==2.1.0
 pytz==2017.2
 qrcode==4.0.4
 sqlparse==0.2.3
+unicodecsv==0.14.1
 Unidecode==0.4.20
 vine==1.1.3
 Werkzeug==0.12.2
+xlrd==1.0.0
+xlwt==1.2.0
