migrate tests to sqllite

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = billing.settings
+DJANGO_SETTINGS_MODULE = billing.test_settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -s
 pep8ignore =
@@ -8,5 +8,7 @@ pep8ignore =
 flakes-ignore =
     settings.py UnusedImport
     settings.py ImportStarUsed
+    test_settings.py UnusedImport
+    test_settings.py ImportStarUsed
     manage.py ALL
     node_modules/* ALL
