client installation workflow

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,7 @@ pep8ignore =
     node_modules/* ALL
 flakes-ignore =
     settings.py UnusedImport
+    __init__.py UnusedImport
     settings.py ImportStarUsed
     test_settings.py UnusedImport
     test_settings.py ImportStarUsed
