--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ billiard==3.5.0.2
 celery==4.0.2
 cryptography==1.8.2
 Django==1.11.1
+django-admin-row-actions==0.0.2
 django-adminactions==1.5
 django-autoslug==1.9.3
 django-cities-light==3.3.0
@@ -15,6 +16,7 @@ django-extensions==1.7.9
 django-filter==1.0.4
 django-formtools==2.0
 django-modeltranslation==0.12.1
+django-object-actions==0.10.0
 django-ordered-model==1.4.1
 django-otp==0.3.14
 django-phonenumber-field==1.3.0
@@ -48,6 +50,7 @@ python-dateutil==2.6.0
 python-utils==2.1.0
 pytz==2017.2
 qrcode==4.0.4
+redis==2.10.5
 sqlparse==0.2.3
 unicodecsv==0.14.1
 Unidecode==0.4.20
