--- a/billing/local_settings.py.dist
+++ b/billing/local_settings.py.dist
@@ -23,3 +23,6 @@ MANAGERS = ADMINS
 SECRET_KEY = 'my_super_secret_key'
 ALLOWED_HOSTS = ['127.0.0.1']
 DEBUG = False
+
+MB_URL = 'https://example.com'
+MB_TOKEN = 'my_super_secret_token'
