--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-debug-toolbar==1.8
 django-extensions==1.7.9
 django-filter==1.0.4
 django-formtools==2.0
+django-material==1.0.0
 django-modeltranslation==0.12.1
 django-object-actions==0.10.0
 django-ordered-model==1.4.1
