--- a/pytest.ini
+++ b/pytest.ini
@@ -11,5 +11,6 @@ flakes-ignore =
     settings.py ImportStarUsed
     test_settings.py UnusedImport
     test_settings.py ImportStarUsed
+    test_settings.py ImportStarUsage
     manage.py ALL
     node_modules/* ALL
