--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 amqp==2.1.4
 apipkg==1.4
 arrow==0.10.0
+awscli==1.11.129
 Babel==2.4.0
 billiard==3.5.0.2
+boto3==1.4.5
+botocore==1.5.92
 celery==4.0.2
+colorama==0.3.7
 contextlib2==0.5.5
 cryptography==1.8.2
 Django==1.11.1
@@ -32,6 +36,7 @@ execnet==1.4.1
 ipdb==0.10.3
 ipython==6.0.0
 ipython-genutils==0.2.0
+jmespath==0.9.3
 kombu==4.0.2
 Markdown==2.6.8
 microsofttranslator==0.8
@@ -54,11 +59,14 @@ pytz==2017.2
 qrcode==4.0.4
 raven==6.1.0
 redis==2.10.5
+rsa==3.4.2
+s3transfer==0.1.10
 sqlparse==0.2.3
 tqdm==4.15.0
 unicodecsv==0.14.1
 Unidecode==0.4.20
 vine==1.1.3
+watchtower==0.3.6
 Werkzeug==0.12.2
 xlrd==1.0.0
 xlwt==1.2.0
