--- a/billing/local_settings.py.dist
+++ b/billing/local_settings.py.dist
@@ -24,6 +24,8 @@ SECRET_KEY = 'my_super_secret_key'
 ALLOWED_HOSTS = ['127.0.0.1']
 DEBUG = False
 
+CELERY_LOGLEVEL = 'debug'
+
 MB_URL = 'https://example.com'
 MB_TOKEN = 'my_super_secret_token'
 MB_TIMEOUT = 1
