--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-extensions==1.7.9
 django-filter==1.0.4
 django-formtools==2.0
 django-material==1.0.0
+django-model-utils==3.0.0
 django-modeltranslation==0.12.1
 django-object-actions==0.10.0
 django-ordered-model==1.4.1
@@ -30,9 +31,9 @@ django-rainbowtests==0.6.0
 django-reversion==2.0.8
 django-rosetta==0.7.13
 django-two-factor-auth==1.6.1
-django-xadmin==0.5.0
 djangorestframework==3.6.3
 execnet==1.4.1
+flower==0.9.2
 ipdb==0.10.3
 ipython==6.0.0
 ipython-genutils==0.2.0
@@ -62,6 +63,7 @@ redis==2.10.5
 rsa==3.4.2
 s3transfer==0.1.10
 sqlparse==0.2.3
+tornado==4.5.2
 tqdm==4.15.0
 unicodecsv==0.14.1
 Unidecode==0.4.20
