--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "font-awesome": "^4.6.3",
+    "jquery": "^3.1.1",
     "jquery.inputmask": "^3.3.3",
-    "jquery": "^3.1.1"
+    "npm": "^5.4.1",
+    "urijs": "^1.18.12"
   },
   "devDependencies": {},
   "scripts": {
