orders creation by services

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ pep8ignore =
     */migrations/* ALL
     node_modules/* ALL
 flakes-ignore =
+    */apps.py UnusedImport
     settings.py UnusedImport
     __init__.py UnusedImport
     settings.py ImportStarUsed
