--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = billing.test_settings
+DJANGO_SETTINGS_MODULE = billing.settings_test
 python_files = tests.py test_*.py *_tests.py
 addopts = -s
 pep8ignore =
@@ -10,8 +10,8 @@ flakes-ignore =
     settings.py UnusedImport
     __init__.py UnusedImport
     settings.py ImportStarUsed
-    test_settings.py UnusedImport
-    test_settings.py ImportStarUsed
-    test_settings.py ImportStarUsage
+    settings_test.py UnusedImport
+    settings_test.py ImportStarUsed
+    settings_test.py ImportStarUsage
     manage.py ALL
     node_modules/* ALL
