--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,8 @@ GTAGS
 rest_client.txt
 
 #Project
-# local_settings.py
-# settings_local.py
+local_settings.py
+settings_local.py
 /nbproject/private/
 node_modules
 google_api_key.json
