--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ pytest==3.1.2
 pytest-cache==1.0
 pytest-django==3.1.2
 pytest-flakes==2.0.0
+pytest-mock==1.6.3
 pytest-pep8==1.0.6
 pytest-xdist==1.18.0
 python-dateutil==2.6.0
