--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ django-rosetta==0.7.13
 django-two-factor-auth==1.6.1
 djangorestframework==3.6.3
 docutils==0.14
+drf-extensions==0.3.1
 execnet==1.4.1
 Fabric3==1.13.1.post1
 flower==0.9.2
