--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ billiard==3.5.0.2
 boto3==1.4.5
 botocore==1.5.92
 celery==4.0.2
+certifi==2017.11.5
 cffi==1.11.2
 colorama==0.3.7
 contextlib2==0.5.5
@@ -42,7 +43,9 @@ docutils==0.14
 drf-extensions==0.3.1
 execnet==1.4.1
 Fabric3==1.13.1.post1
+flake8==3.5.0
 flower==0.9.2
+idna==2.6
 ipdb==0.10.3
 ipython==6.0.0
 ipython-genutils==0.2.0
@@ -50,13 +53,16 @@ jedi==0.11.0
 jmespath==0.9.3
 kombu==4.0.2
 Markdown==2.6.8
+mccabe==0.6.1
 microsofttranslator==0.8
 packaging==16.8
 paramiko==2.3.1
 parso==0.1.0
 pep8==1.7.0
+pew==1.1.0
 phonenumberslite==8.5.0
 pickleshare==0.7.4
+pipenv==8.3.1
 polib==1.0.8
 progressbar2==3.30.2
 prompt-toolkit==1.0.15
@@ -65,6 +71,7 @@ ptyprocess==0.5.1
 py==1.4.34
 py-moneyed==0.7.0
 pyasn1==0.3.7
+pycodestyle==2.3.1
 pycparser==2.18
 pyflakes==1.6.0
 Pygments==2.2.0
@@ -84,16 +91,21 @@ pytz==2017.2
 qrcode==4.0.4
 raven==6.1.0
 redis==2.10.5
+requests==2.18.4
 rsa==3.4.2
 s3transfer==0.1.10
 simplegeneric==0.8.1
 sqlparse==0.2.3
+stripe==1.73.0
 tornado==4.5.2
 tqdm==4.15.0
 traitlets==4.3.2
 unicodecsv==0.14.1
 Unidecode==0.4.20
+urllib3==1.22
 vine==1.1.3
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
 watchtower==0.3.6
 wcwidth==0.1.7
 Werkzeug==0.12.2
