--- a/billing/settings_local.py.dist
+++ b/billing/settings_local.py.dist
@@ -2,8 +2,8 @@ DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql_psycopg2',
         'NAME': 'db_name',
-        'USER': 'username',
-        'PASSWORD': 'password',
+        'USER': 'postgres',
+        'PASSWORD': 'postgres',
         'HOST': '127.0.0.1',
         'PORT': '5432'
     }
@@ -22,7 +22,7 @@ MANAGERS = ADMINS
 
 SECRET_KEY = 'my_super_secret_key'
 ALLOWED_HOSTS = ['127.0.0.1']
-DEBUG = False
+DEBUG = True
 
 CELERY_LOGLEVEL = 'debug'
 
@@ -32,8 +32,8 @@ CORS_ORIGIN_WHITELIST = (
     'maxi-booking.ru',
     'maxibooking.ru',
 )
-CORS_ORIGIN_ALLOW_ALL = False
-CORS_ORIGIN_REGEX_WHITELIST = (r'^(https?://)?(\w+\.)?google\.com$', )
+CORS_ORIGIN_ALLOW_ALL = True
+#CORS_ORIGIN_REGEX_WHITELIST = (r'^(https?://)?(\w+\.)?google\.com$', )
 
 # Rbk
 RBK_SHOP_ID = 'rbk_shop_id'
