--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ pipelines:
   default:
     - step:
         script:
-          - cp -n settings_local.py.dist settings_local.py
+          - cp -n billing/settings_local.py.dist billing/settings_local.py
           - pip install -r requirements.txt
           - python manage.py collectstatic --no-input
           - python manage.py migrate --no-input
