--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ django-object-actions==0.10.0
 django-ordered-model==1.4.1
 django-otp==0.3.14
 django-phonenumber-field==1.3.0
+django-prettyjson==0.3.0
 django-rainbowtests==0.6.0
 django-reversion==2.0.8
 django-rosetta==0.7.13
@@ -96,6 +97,7 @@ rsa==3.4.2
 s3transfer==0.1.10
 simplegeneric==0.8.1
 sqlparse==0.2.3
+standardjson==0.3.1
 stripe==1.73.0
 tornado==4.5.2
 tqdm==4.15.0
