--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = billing.settings_test
 python_files = tests.py test_*.py *_tests.py
-addopts = -s
+addopts = -s --reuse-db
 pep8ignore =
     */migrations/* ALL
     node_modules/* ALL
