--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ certifi==2017.11.5
 cffi==1.11.2
 colorama==0.3.7
 contextlib2==0.5.5
+coverage==4.4.2
 cryptography==1.8.2
 decorator==4.1.2
 Django==1.11.1
