--- a/billing/settings_local.py.dist
+++ b/billing/settings_local.py.dist
@@ -68,3 +68,16 @@ MB_ORDER_BEFORE_DAYS = 14
 MB_ORDER_PAYMENT_NOTIFY_DAYS = 3
 # Client archive period (in months)
 MB_CLIENT_ARCHIVE_MONTHS = 6
+# Bill recipient company
+MB_BILL_RECIPIENT_COMPANY = {
+    'bank': 'bank title',
+    'bank_bik': '1111111111111111111',
+    'bank_account': '1111111111111111111',
+    'inn': '1111111111111111111',
+    'kpp': '1111111111111111111',
+    'company_account': '1111111111111111111',
+    'company_name': 'company name',
+    'company_text': 'recipient text',
+    'boss': 'Boss F.A.',
+    'bookkeeper': 'Bookkeeper F.A.',
+}
