--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.1.1",
     "jquery.inputmask": "^3.3.3",
     "npm": "^5.4.1",
+    "reset-css": "^2.2.1",
     "urijs": "^1.18.12"
   },
   "devDependencies": {},
