--- a/billing/settings_local.py.dist
+++ b/billing/settings_local.py.dist
@@ -48,13 +48,13 @@ MB_URLS = {
     'ru': {
         'install': 'https://example.com',
         'archive': 'https://example.com',
-        'fixtures': 'https://example.com',
+        'fixtures': 'https://{}.example.com',
         'token': 'token_ru'
     },
     '__all__': {
         'install': 'https://example.com',
         'archive': 'https://example.com',
-        'fixtures': 'https://example.com',
+        'fixtures': 'https://{}.example.com',
         'token': 'token_all'
     }
 }
