--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,7 @@ pipelines:
         caches:
           - pip
         script:
-          - apt-get update; apt-get install -y gettext-base;
+          - apt-get update; apt-get install -y gettext;
           - cp -n billing/settings_local.py.dist billing/settings_local.py
           - pip install -r requirements.txt
           - python manage.py migrate --no-input
