--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 amqp==2.1.4
 apipkg==1.4
 arrow==0.10.0
+asn1crypto==0.24.0
+attrs==17.4.0
 awscli==1.11.129
 Babel==2.4.0
 bcrypt==3.1.4
@@ -10,6 +12,7 @@ botocore==1.5.92
 celery==4.0.2
 certifi==2017.11.5
 cffi==1.11.2
+chardet==3.0.4
 colorama==0.3.7
 contextlib2==0.5.5
 coverage==4.4.2
@@ -40,6 +43,7 @@ django-prettyjson==0.3.0
 django-rainbowtests==0.6.0
 django-reversion==2.0.8
 django-rosetta==0.7.13
+django-tabbed-admin==1.0.3
 django-two-factor-auth==1.6.1
 djangorestframework==3.6.3
 djangorestframework-filters==0.10.2
@@ -65,9 +69,11 @@ paramiko==2.3.1
 parso==0.1.0
 pep8==1.7.0
 pew==1.1.0
+pexpect==4.4.0
 phonenumberslite==8.5.0
 pickleshare==0.7.4
 pipenv==8.3.1
+pluggy==0.6.0
 polib==1.0.8
 progressbar2==3.30.2
 prompt-toolkit==1.0.15
@@ -86,6 +92,7 @@ pytest==3.1.2
 pytest-cache==1.0
 pytest-django==3.1.2
 pytest-flakes==2.0.0
+pytest-forked==0.2
 pytest-mock==1.6.3
 pytest-pep8==1.0.6
 pytest-xdist==1.18.0
@@ -93,6 +100,7 @@ python-dateutil==2.6.0
 python-memcached==1.58
 python-utils==2.1.0
 pytz==2017.2
+PyYAML==3.12
 qrcode==4.0.4
 raven==6.1.0
 redis==2.10.5
@@ -100,12 +108,14 @@ requests==2.18.4
 rsa==3.4.2
 s3transfer==0.1.10
 simplegeneric==0.8.1
+six==1.11.0
 sqlparse==0.2.3
 standardjson==0.3.1
 stripe==1.73.0
 tornado==4.5.2
 tqdm==4.15.0
 traitlets==4.3.2
+typing==3.6.4
 unicodecsv==0.14.1
 Unidecode==0.4.20
 urllib3==1.22
