fix test after calc update

--- a/.ansible/roles/postgres/tasks/main.yml
+++ b/.ansible/roles/postgres/tasks/main.yml
@@ -11,7 +11,11 @@
   tags: postgres  
 
 - name: Start PostgreSQL and enable at boot
-  service: name=postgresql enabled=yes state=started
+  service:
+    name: postgresql
+    enabled: yes
+    state: started
+  tags: postgres  
 
 - block:
 
