--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ botocore==1.5.92
 celery==4.0.2
 certifi==2017.11.5
 cffi==1.11.2
-chardet==3.0.4
 colorama==0.3.7
 contextlib2==0.5.5
 coverage==4.4.2
@@ -25,12 +24,15 @@ django-ajax-selects==1.6.1
 django-annoying==0.10.3
 django-autoslug==1.9.3
 django-cities-light==3.3.0
+django-colorful==1.2
 django-cors-headers==2.1.0
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
 django-extensions==1.7.9
 django-filter==1.0.4
 django-formtools==2.0
+django-iprestrict==1.5.0
+django-ipware==2.0.1
 django-material==1.0.0
 django-model-utils==3.0.0
 django-modeltranslation==0.12.1
@@ -44,6 +46,7 @@ django-rainbowtests==0.6.0
 django-reversion==2.0.8
 django-rosetta==0.7.13
 django-tabbed-admin==1.0.3
+django-templatetag-handlebars==1.3.1
 django-two-factor-auth==1.6.1
 djangorestframework==3.6.3
 djangorestframework-filters==0.10.2
@@ -51,9 +54,7 @@ docutils==0.14
 drf-extensions==0.3.1
 execnet==1.4.1
 Fabric3==1.13.1.post1
-flake8==3.5.0
 flower==0.9.2
-idna==2.6
 ipdb==0.10.3
 ipython==6.0.0
 ipython-genutils==0.2.0
@@ -61,33 +62,25 @@ jedi==0.11.0
 jmespath==0.9.3
 kombu==4.0.2
 Markdown==2.6.8
-mccabe==0.6.1
 microsofttranslator==0.8
 num2words==0.5.6
-packaging==16.8
 paramiko==2.3.1
 parso==0.1.0
 pep8==1.7.0
 pew==1.1.0
 pexpect==4.4.0
 phonenumberslite==8.5.0
-pickleshare==0.7.4
 pipenv==8.3.1
 pluggy==0.6.0
 polib==1.0.8
 progressbar2==3.30.2
-prompt-toolkit==1.0.15
 psycopg2==2.7.3.1
 ptyprocess==0.5.1
 py==1.4.34
 py-moneyed==0.7.0
 pyasn1==0.3.7
-pycodestyle==2.3.1
 pycparser==2.18
-pyflakes==1.6.0
-Pygments==2.2.0
 PyNaCl==1.1.2
-pyparsing==2.2.0
 pytest==3.1.2
 pytest-cache==1.0
 pytest-django==3.1.2
@@ -104,26 +97,19 @@ PyYAML==3.12
 qrcode==4.0.4
 raven==6.1.0
 redis==2.10.5
-requests==2.18.4
 rsa==3.4.2
 s3transfer==0.1.10
-simplegeneric==0.8.1
-six==1.11.0
 sqlparse==0.2.3
 standardjson==0.3.1
 stripe==1.73.0
 tornado==4.5.2
 tqdm==4.15.0
-traitlets==4.3.2
 typing==3.6.4
 unicodecsv==0.14.1
 Unidecode==0.4.20
-urllib3==1.22
 vine==1.1.3
-virtualenv==15.1.0
 virtualenv-clone==0.2.6
 watchtower==0.3.6
-wcwidth==0.1.7
 Werkzeug==0.12.2
 xlrd==1.0.0
 xlwt==1.2.0
