--- a/billing/settings_local.py.dist
+++ b/billing/settings_local.py.dist
@@ -37,6 +37,13 @@ CORS_ORIGIN_WHITELIST = (
 CORS_ORIGIN_ALLOW_ALL = True
 # CORS_ORIGIN_REGEX_WHITELIST = (r'^(https?://)?(\w+\.)?google\.com$', )
 
+# Client login restrictions
+MB_CLIENT_LOGIN_RESTRICTIONS = [
+    'support', 'demo', 'mail', 'mx', 'payment', 'www', 'new', 'info', 'cdn',
+    'mb', 'help', 'redmine', 'deploy', 'trial', '_amazonses', 'billing',
+    'maxibooking'
+]
+
 # Rbk
 RBK_SHOP_ID = 'rbk_shop_id'
 RBK_SECRET_KEY = 'rbk_secret_key'
