--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cryptography==1.8.2
 decorator==4.1.2
 Django==1.11.1
 django-admin-row-actions==0.0.2
+django-admin-view-permission==1.6
 django-adminactions==1.5
 django-ajax-selects==1.6.1
 django-annoying==0.10.3
