--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ jmespath==0.9.3
 kombu==4.0.2
 Markdown==2.6.8
 microsofttranslator==0.8
+more-itertools==4.1.0
 num2words==0.5.6
 paramiko==2.3.1
 parso==0.1.0
@@ -77,12 +78,12 @@ polib==1.0.8
 progressbar2==3.30.2
 psycopg2==2.7.3.1
 ptyprocess==0.5.1
-py==1.4.34
+py==1.5.3
 py-moneyed==0.7.0
 pyasn1==0.3.7
 pycparser==2.18
 PyNaCl==1.1.2
-pytest==3.1.2
+pytest==3.5.1
 pytest-cache==1.0
 pytest-django==3.1.2
 pytest-flakes==2.0.0
