--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ bcrypt==3.1.4
 billiard==3.5.0.2
 boto3==1.4.5
 botocore==1.5.92
+cairocffi==0.8.0
+CairoSVG==2.1.3
 celery==4.0.2
 certifi==2017.11.5
 cffi==1.11.2
@@ -16,7 +18,9 @@ colorama==0.3.7
 contextlib2==0.5.5
 coverage==4.4.2
 cryptography==1.8.2
+cssselect2==0.2.1
 decorator==4.1.2
+defusedxml==0.5.0
 Django==1.11.1
 django-admin-row-actions==0.0.2
 django-admin-view-permission==1.6
@@ -56,6 +60,7 @@ drf-extensions==0.3.1
 execnet==1.4.1
 Fabric3==1.13.1.post1
 flower==0.9.2
+html5lib==1.0.1
 ipdb==0.10.3
 ipython==6.0.0
 ipython-genutils==0.2.0
@@ -68,10 +73,12 @@ more-itertools==4.1.0
 num2words==0.5.6
 paramiko==2.3.1
 parso==0.1.0
+pdfrw==0.4
 pep8==1.7.0
 pew==1.1.0
 pexpect==4.4.0
 phonenumberslite==8.5.0
+Pillow==5.1.0
 pipenv==8.3.1
 pluggy==0.6.0
 polib==1.0.8
@@ -83,6 +90,7 @@ py-moneyed==0.7.0
 pyasn1==0.3.7
 pycparser==2.18
 PyNaCl==1.1.2
+Pyphen==0.9.4
 pytest==3.5.1
 pytest-cache==1.0
 pytest-django==3.1.2
@@ -104,6 +112,7 @@ s3transfer==0.1.10
 sqlparse==0.2.3
 standardjson==0.3.1
 stripe==1.73.0
+tinycss2==0.6.1
 tornado==4.5.2
 tqdm==4.15.0
 typing==3.6.4
@@ -112,6 +121,8 @@ Unidecode==0.4.20
 vine==1.1.3
 virtualenv-clone==0.2.6
 watchtower==0.3.6
+WeasyPrint==0.42.3
+webencodings==0.5.1
 Werkzeug==0.12.2
 xlrd==1.0.0
 xlwt==1.2.0
