--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ cssselect2==0.2.1
 decorator==4.1.2
 defusedxml==0.5.0
 Django==1.11.1
+django-admin-rangefilter==0.3.7
 django-admin-row-actions==0.0.2
 django-admin-view-permission==1.6
 django-adminactions==1.5
