--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,7 @@ flakes-ignore =
     settings.py UnusedImport
     __init__.py UnusedImport
     settings.py ImportStarUsed
+    settings.py ImportStarUsage
     settings_test.py UnusedImport
     settings_test.py ImportStarUsed
     settings_test.py ImportStarUsage
