--- a/billing/settings_local.py.dist
+++ b/billing/settings_local.py.dist
@@ -89,6 +89,7 @@ PAYMENT_SYSTEMS = (
 MB_SETTINGS_BY_COUNTRY['MB_URLS'] = {
     'ru': {
         'install': 'https://www.example.com',
+        'login_invalidation': 'https://www.example.com',
         'archive': 'https://www.example.com',
         'fixtures': 'https://{}.example.com',
         'client_invalidation': 'https://{}.example.com',
@@ -96,6 +97,7 @@ MB_SETTINGS_BY_COUNTRY['MB_URLS'] = {
     },
     '__all__': {
         'install': 'https://example.com',
+        'login_invalidation': 'https://www.example.com',
         'archive': 'https://example.com',
         'fixtures': 'https://{}.example.com',
         'client_invalidation': 'https://{}.example.com',
