--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ billiard==3.5.0.2
 boto3==1.4.5
 botocore==1.5.92
 braintree==3.46.0
+braintreehttp==0.5.0
 cairocffi==0.8.0
 CairoSVG==2.1.3
 celery==4.0.2
@@ -18,12 +19,14 @@ cffi==1.11.2
 chardet==3.0.4
 colorama==0.3.7
 contextlib2==0.5.5
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==4.4.2
 cryptography==2.2.2
 cssselect2==0.2.1
 decorator==4.1.2
 defusedxml==0.5.0
-Django==1.11.1
+Django==1.11.15
 django-admin-rangefilter==0.3.7
 django-admin-row-actions==0.0.2
 django-admin-view-permission==1.6
@@ -51,6 +54,7 @@ django-otp==0.3.14
 django-phonenumber-field==1.3.0
 django-prettyjson==0.3.0
 django-rainbowtests==0.6.0
+django-rest-swagger==2.2.0
 django-reversion==2.0.8
 django-rosetta==0.7.13
 django-tabbed-admin==1.0.3
@@ -69,18 +73,22 @@ idna==2.7
 ipdb==0.10.3
 ipython==6.0.0
 ipython-genutils==0.2.0
+itypes==1.1.0
 jedi==0.12.1
+Jinja2==2.10
 jmespath==0.9.3
 json-rpc==1.11.0
 jsonpickle==0.9.6
 kombu==4.0.2
 Markdown==2.6.8
+MarkupSafe==1.1.0
 mccabe==0.6.1
 microsofttranslator==0.8
 more-itertools==4.1.0
 mypy==0.630
 mypy-extensions==0.4.1
 num2words==0.5.6
+openapi-codec==1.3.2
 paramiko==2.3.1
 parso==0.3.1
 paypalrestsdk==1.13.1
@@ -129,6 +137,7 @@ requests==2.19.1
 rsa==3.4.2
 s3transfer==0.1.10
 simplegeneric==0.8.1
+simplejson==3.16.0
 six==1.11.0
 sqlparse==0.2.3
 standardjson==0.3.1
@@ -141,6 +150,7 @@ typed-ast==1.1.0
 typing==3.6.4
 unicodecsv==0.14.1
 Unidecode==0.4.20
+uritemplate==3.0.0
 urllib3==1.23
 vine==1.1.3
 virtualenv==16.0.0
