change registration email

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ DJANGO_SETTINGS_MODULE = billing.settings_test
 python_files = tests.py test_*.py *_tests.py
 addopts = -s --reuse-db
 pep8ignore =
+    */managers.py W503
     */migrations/* ALL
     node_modules/* ALL
 flakes-ignore =
