--- a/billing/settings_local.py.dist
+++ b/billing/settings_local.py.dist
@@ -104,7 +104,7 @@ MB_SETTINGS_BY_COUNTRY['MB_URLS'] = {
         'token': 'token_all'
     }
 }
-#MB_COUNTRIES_OVERWRITE = {'ge': 'ru'}
+MB_COUNTRIES_OVERWRITE = {}
 
 # Requests timeout (sec)
 MB_TIMEOUT = 1
