--- a/requirements.txt
+++ b/requirements.txt
@@ -111,7 +111,7 @@ py-moneyed==0.7.0
 pyasn1==0.3.7
 pycodestyle==2.3.1
 pycparser==2.18
-pyflakes==2.0.0
+#pyflakes==2.0.0
 Pygments==2.2.0
 PyNaCl==1.1.2
 pyOpenSSL==18.0.0
