--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 amqp==2.1.4
 apipkg==1.4
 arrow==0.10.0
-asn1crypto==0.24.0
 attrs==17.4.0
 awscli==1.11.129
 Babel==2.4.0
@@ -16,7 +15,6 @@ CairoSVG==2.1.3
 celery==4.0.2
 certifi==2017.11.5
 cffi==1.11.2
-chardet==3.0.4
 colorama==0.3.7
 contextlib2==0.5.5
 coreapi==2.3.3
@@ -59,6 +57,7 @@ django-reversion==2.0.8
 django-rosetta==0.7.13
 django-tabbed-admin==1.0.3
 django-templatetag-handlebars==1.3.1
+django-timezone-field==3.0
 django-two-factor-auth==1.6.1
 djangorestframework==3.6.3
 djangorestframework-filters==0.10.2
@@ -70,11 +69,11 @@ flake8==3.5.0
 flower==0.9.2
 html5lib==1.0.1
 idna==2.7
+importlib-resources==1.0.2
 ipdb==0.10.3
 ipython==6.0.0
-ipython-genutils==0.2.0
 itypes==1.1.0
-jedi==0.12.1
+jedi==0.13.2
 Jinja2==2.10
 jmespath==0.9.3
 json-rpc==1.11.0
@@ -88,6 +87,7 @@ more-itertools==4.1.0
 mypy==0.630
 mypy-extensions==0.4.1
 num2words==0.5.6
+numpy==1.16.0
 openapi-codec==1.3.2
 paramiko==2.3.1
 parso==0.3.1
@@ -97,13 +97,11 @@ pep8==1.7.0
 pew==1.1.0
 pexpect==4.4.0
 phonenumberslite==8.5.0
-pickleshare==0.7.4
 Pillow==5.1.0
 pipenv==8.3.1
 pluggy==0.6.0
 polib==1.0.8
 progressbar2==3.30.2
-prompt-toolkit==1.0.15
 psycopg2==2.7.3.1
 ptyprocess==0.5.1
 py==1.5.3
@@ -111,8 +109,7 @@ py-moneyed==0.7.0
 pyasn1==0.3.7
 pycodestyle==2.3.1
 pycparser==2.18
-#pyflakes==2.0.0
-Pygments==2.2.0
+pyflakes==1.6.0
 PyNaCl==1.1.2
 pyOpenSSL==18.0.0
 Pyphen==0.9.4
@@ -129,23 +126,20 @@ python-dateutil==2.6.0
 python-memcached==1.58
 python-utils==2.1.0
 pytz==2017.2
-PyYAML==3.12
 qrcode==4.0.4
 raven==6.1.0
 redis==2.10.5
 requests==2.19.1
 rsa==3.4.2
 s3transfer==0.1.10
-simplegeneric==0.8.1
 simplejson==3.16.0
-six==1.11.0
 sqlparse==0.2.3
 standardjson==0.3.1
 stripe==1.73.0
+timezonefinder==3.4.2
 tinycss2==0.6.1
 tornado==4.5.2
 tqdm==4.15.0
-traitlets==4.3.2
 typed-ast==1.1.0
 typing==3.6.4
 unicodecsv==0.14.1
@@ -156,7 +150,6 @@ vine==1.1.3
 virtualenv==16.0.0
 virtualenv-clone==0.2.6
 watchtower==0.3.6
-wcwidth==0.1.7
 WeasyPrint==0.42.3
 webencodings==0.5.1
 Werkzeug==0.12.2
