update pip requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==2.1.4
 apipkg==1.4
 arrow==0.10.0
+atomicwrites==1.3.0
 attrs==17.4.0
 awscli==1.11.129
 Babel==2.4.0
@@ -24,43 +25,45 @@ cryptography==2.2.2
 cssselect2==0.2.1
 decorator==4.1.2
 defusedxml==0.5.0
-Django==1.11.15
+Django==2.1.7
 django-admin-rangefilter==0.3.7
 django-admin-row-actions==0.0.2
 django-admin-view-permission==1.6
 django-adminactions==1.5
-django-ajax-selects==1.6.1
+django-ajax-selects==1.7.1
 django-annoying==0.10.3
-django-autoslug==1.9.3
-django-cities-light==3.3.0
+django-autoslug==1.9.4
+django-autoslug-iplweb==1.9.4.dev0
+django-cities-light==3.5.0
 django-colorful==1.2
 django-cors-headers==2.1.0
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
 django-extensions==1.7.9
-django-filter==1.0.4
-django-formtools==2.0
+django-filter==2.1.0
+django-filters==0.2.1
+django-formtools==2.1
 django-iprestrict==1.5.0
 django-ipware==2.0.1
 django-material==1.0.0
 django-model-utils==3.1.2
-django-modeltranslation==0.12.1
+django-modeltranslation==0.13
 django-money==0.14.4
 django-object-actions==0.10.0
-django-ordered-model==1.4.1
+django-ordered-model==3.1.1
 django-otp==0.3.14
-django-phonenumber-field==1.3.0
+django-phonenumber-field==2.2.0
 django-prettyjson==0.3.0
 django-rainbowtests==0.6.0
 django-rest-swagger==2.2.0
 django-reversion==2.0.8
-django-rosetta==0.7.13
+django-rosetta==0.9.1
 django-tabbed-admin==1.0.3
 django-templatetag-handlebars==1.3.1
 django-timezone-field==3.0
-django-two-factor-auth==1.6.1
-djangorestframework==3.6.3
-djangorestframework-filters==0.10.2
+django-two-factor-auth==1.8.0
+djangorestframework==3.9.1
+djangorestframework-filters==1.0.0.dev0
 docutils==0.14
 drf-extensions==0.3.1
 execnet==1.4.1
@@ -93,14 +96,15 @@ paramiko==2.3.1
 parso==0.3.1
 paypalrestsdk==1.13.1
 pdfrw==0.4
-pep8==1.7.0
+pep8==1.7.1
 pew==1.1.0
 pexpect==4.4.0
+phonenumbers==8.10.6
 phonenumberslite==8.5.0
 Pillow==5.1.0
 pipenv==8.3.1
 pluggy==0.6.0
-polib==1.0.8
+polib==1.1.0
 progressbar2==3.30.2
 psycopg2==2.7.3.1
 ptyprocess==0.5.1
@@ -115,8 +119,9 @@ pyOpenSSL==18.0.0
 Pyphen==0.9.4
 pytest==3.5.1
 pytest-cache==1.0
+pytest-codestyle==1.4.0
 pytest-django==3.1.2
-pytest-flakes==2.0.0
+pytest-flakes==4.0.0
 pytest-forked==0.2
 pytest-mock==1.6.3
 pytest-mypy==0.3.2
