--- a/requirements.txt
+++ b/requirements.txt
@@ -1,162 +1,186 @@
-amqp==2.1.4
-apipkg==1.4
-arrow==0.10.0
+amqp==2.4.1
+apipkg==1.5
+arrow==0.13.1
 atomicwrites==1.3.0
-attrs==17.4.0
-awscli==1.11.129
-Babel==2.4.0
-bcrypt==3.1.4
-billiard==3.5.0.2
-boto3==1.4.5
-botocore==1.5.92
-braintree==3.46.0
+attrs==18.2.0
+awscli==1.16.112
+Babel==2.6.0
+backcall==0.1.0
+bcrypt==3.1.6
+billiard==3.5.0.5
+boto3==1.9.102
+botocore==1.12.102
+braintree==3.51.0
 braintreehttp==0.5.0
-cairocffi==0.8.0
-CairoSVG==2.1.3
-celery==4.0.2
-certifi==2017.11.5
-cffi==1.11.2
-colorama==0.3.7
+cairocffi==1.0.2
+CairoSVG==2.3.0
+celery==4.2.1
+certifi==2018.11.29
+cffi==1.12.1
+colorama==0.4.1
 contextlib2==0.5.5
 coreapi==2.3.3
 coreschema==0.0.4
-coverage==4.4.2
-cryptography==2.2.2
+coverage==4.5.2
+cryptography==2.5
 cssselect2==0.2.1
-decorator==4.1.2
+decorator==4.3.2
 defusedxml==0.5.0
+distro==1.4.0
 Django==2.1.7
-django-admin-rangefilter==0.3.7
-django-admin-row-actions==0.0.2
-django-admin-view-permission==1.6
-django-adminactions==1.5
+django-admin-rangefilter==0.3.12
+django-admin-row-actions==0.0.4
+django-admin-view-permission==1.9
+django-adminactions==1.6.0
 django-ajax-selects==1.7.1
-django-annoying==0.10.3
+django-annoying==0.10.4
 django-autoslug==1.9.4
-django-autoslug-iplweb==1.9.4.dev0
+django-autoslug-iplweb==1.9.4
 django-cities-light==3.5.0
-django-colorful==1.2
-django-cors-headers==2.1.0
-django-crispy-forms==1.6.1
-django-debug-toolbar==1.8
-django-extensions==1.7.9
+django-colorful==1.3
+django-cors-headers==2.4.0
+django-crispy-forms==1.7.2
+django-debug-toolbar==1.11
+django-extensions==2.1.6
 django-filter==2.1.0
 django-filters==0.2.1
 django-formtools==2.1
-django-iprestrict==1.5.0
-django-ipware==2.0.1
-django-material==1.0.0
+django-iprestrict==1.7.0
+django-ipware==2.1.0
+django-material==1.5.0
 django-model-utils==3.1.2
 django-modeltranslation==0.13
 django-money==0.14.4
-django-object-actions==0.10.0
+django-object-actions==1.0.0
 django-ordered-model==3.1.1
-django-otp==0.3.14
+django-otp==0.5.2
 django-phonenumber-field==2.2.0
-django-prettyjson==0.3.0
+django-prettyjson==0.4.1
 django-rainbowtests==0.6.0
 django-rest-swagger==2.2.0
-django-reversion==2.0.8
+django-reversion==3.0.3
 django-rosetta==0.9.1
-django-tabbed-admin==1.0.3
+django-tabbed-admin==1.0.4
 django-templatetag-handlebars==1.3.1
 django-timezone-field==3.0
 django-two-factor-auth==1.8.0
 djangorestframework==3.9.1
 djangorestframework-filters==1.0.0.dev0
+docopt==0.6.2
 docutils==0.14
-drf-extensions==0.3.1
-execnet==1.4.1
-Fabric3==1.13.1.post1
-flake8==3.5.0
+drf-extensions==0.4.0
+execnet==1.5.0
+Fabric3==1.14.post1
+flake8==3.7.7
 flower==0.9.2
 html5lib==1.0.1
+httplib2==0.12.1
+hy==0.16.0
 idna==2.7
 importlib-resources==1.0.2
-ipdb==0.10.3
-ipython==6.0.0
+ipdb==0.11
+ipython==7.3.0
+isort==4.3.9
 itypes==1.1.0
-jedi==0.13.2
+jedi==0.13.3
+jeepney==0.4
 Jinja2==2.10
-jmespath==0.9.3
-json-rpc==1.11.0
-jsonpickle==0.9.6
-kombu==4.0.2
-Markdown==2.6.8
-MarkupSafe==1.1.0
+jmespath==0.9.4
+json-rpc==1.12.1
+jsonpickle==1.1
+keyring==18.0.0
+keyrings.alt==3.1.1
+kombu==4.3.0
+lazr.restfulclient==0.14.2
+macaroonbakery==1.2.1
+Markdown==3.0.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
 microsofttranslator==0.8
-more-itertools==4.1.0
-mypy==0.630
+more-itertools==6.0.0
+mypy==0.670
 mypy-extensions==0.4.1
-num2words==0.5.6
-numpy==1.16.0
+netifaces==0.10.9
+num2words==0.5.9
+numpy==1.16.1
+oauthlib==3.0.1
 openapi-codec==1.3.2
-paramiko==2.3.1
-parso==0.3.1
+paramiko==2.4.2
+parso==0.3.4
 paypalrestsdk==1.13.1
 pdfrw==0.4
 pep8==1.7.1
-pew==1.1.0
-pexpect==4.4.0
+pew==1.1.5
+pexpect==4.6.0
 phonenumbers==8.10.6
-phonenumberslite==8.5.0
-Pillow==5.1.0
-pipenv==8.3.1
-pluggy==0.6.0
+phonenumberslite==8.10.6
+pickleshare==0.7.5
+Pillow==5.4.1
+pipenv==2018.11.26
+pluggy==0.9.0
 polib==1.1.0
-progressbar2==3.30.2
-psycopg2==2.7.3.1
-ptyprocess==0.5.1
-py==1.5.3
+progressbar2==3.39.2
+prompt-toolkit==2.0.9
+protobuf==3.6.1
+psycopg2==2.7.7
+ptyprocess==0.6.0
+py==1.8.0
 py-moneyed==0.8.0
-pyasn1==0.3.7
-pycodestyle==2.3.1
-pycparser==2.18
-pyflakes==1.6.0
-PyNaCl==1.1.2
-pyOpenSSL==18.0.0
-Pyphen==0.9.4
-pytest==3.5.1
+pyasn1==0.4.5
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.0
+Pygments==2.3.1
+PyJWT==1.7.1
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+Pyphen==0.9.5
+pytest==4.3.0
 pytest-cache==1.0
 pytest-codestyle==1.4.0
-pytest-django==3.1.2
+pytest-django==3.4.7
 pytest-flakes==4.0.0
-pytest-forked==0.2
-pytest-mock==1.6.3
+pytest-forked==1.0.2
+pytest-mock==1.10.1
 pytest-mypy==0.3.2
 pytest-pep8==1.0.6
-pytest-xdist==1.18.0
-python-dateutil==2.6.0
-python-memcached==1.58
-python-utils==2.1.0
-pytz==2017.2
-qrcode==4.0.4
-raven==6.1.0
-redis==2.10.5
-requests==2.19.1
-rsa==3.4.2
-s3transfer==0.1.10
+pytest-xdist==1.26.1
+python-dateutil==2.8.0
+python-debian==0.1.34
+python-memcached==1.59
+python-utils==2.3.0
+pytz==2018.9
+pyxdg==0.26
+PyYAML==3.13
+qrcode==6.1
+raven==6.10.0
+redis==3.2.0
+reportlab==3.5.13
+requests==2.21.0
+rsa==4.0
+s3transfer==0.2.0
+SecretStorage==3.1.1
 simplejson==3.16.0
-sqlparse==0.2.3
+sqlparse==0.2.4
 standardjson==0.3.1
-stripe==1.73.0
+stripe==2.21.0
 timezonefinder==3.4.2
 tinycss2==0.6.1
-tornado==4.5.2
-tqdm==4.15.0
-typed-ast==1.1.0
-typing==3.6.4
+tornado==5.1.1
+tqdm==4.31.1
+typed-ast==1.3.1
+typing==3.6.6
 unicodecsv==0.14.1
-Unidecode==0.4.20
+Unidecode==1.0.23
 uritemplate==3.0.0
-urllib3==1.23
-vine==1.1.3
-virtualenv==16.0.0
-virtualenv-clone==0.2.6
-watchtower==0.3.6
-WeasyPrint==0.42.3
+urllib3==1.24.1
+vine==1.2.0
+virtualenv==16.4.1
+virtualenv-clone==0.5.1
+watchtower==0.5.5
+WeasyPrint==45
 webencodings==0.5.1
-Werkzeug==0.12.2
-xlrd==1.0.0
-xlwt==1.2.0
+Werkzeug==0.14.1
+xlrd==1.2.0
+xlwt==1.3.0
+yapf==0.26.0
