change the paths for the ansible keys

--- a/.ansible/prod.ini
+++ b/.ansible/prod.ini
@@ -1,5 +1,5 @@
 [webservers:vars]
-ansible_ssh_private_key_file=~/.ssh/pem/maxibookingltd.pem
+ansible_ssh_private_key_file=~/.ssh/maxibookingltd.pem
 
 [webservers]
 billing.maxi-booking.com
