--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ rest_client.txt
 #Project
 local_settings.py
 settings_local.py
+billing/settings/local.py
 /nbproject/private/
 node_modules
 google_api_key.json
