--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = billing.settings_test
+DJANGO_SETTINGS_MODULE = billing.settings.test
 python_files = tests.py test_*.py *_tests.py
 addopts = -s --reuse-db
 pep8ignore =
@@ -8,12 +8,9 @@ pep8ignore =
     node_modules/* ALL
 flakes-ignore =
     */apps.py UnusedImport
-    settings.py UnusedImport
+    settings/*.py UnusedImport
+    settings/*.py ImportStarUsed
+    settings/*.py ImportStarUsage
     __init__.py UnusedImport
-    settings.py ImportStarUsed
-    settings.py ImportStarUsage
-    settings_test.py UnusedImport
-    settings_test.py ImportStarUsed
-    settings_test.py ImportStarUsage
     manage.py ALL
     node_modules/* ALL
