--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,8 @@ rest_client.txt
 #Project
 local_settings.py
 settings_local.py
-billing/settings/local.py
+billing/settings/.env
+billing/settings/.env_test
 /nbproject/private/
 node_modules
 google_api_key.json
