--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,9 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = billing.settings.test
+DJANGO_SETTINGS_MODULE = billing.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -s --reuse-db
+env =
+    RUN_ENV=test
 pep8ignore =
     */managers.py W503
     */migrations/* ALL
