--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ django-timezone-field==3.0
 django-two-factor-auth==1.8.0
 djangorestframework==3.9.1
 djangorestframework-filters==1.0.0.dev0
+django-environ==0.4.5
 docopt==0.6.2
 docutils==0.14
 drf-extensions==0.4.0
@@ -145,6 +146,7 @@ pytest-mock==1.10.1
 pytest-mypy==0.3.2
 pytest-pep8==1.0.6
 pytest-xdist==1.26.1
+pytest-env==0.6.2
 python-dateutil==2.8.0
 python-debian==0.1.34
 python-memcached==1.59
