Updates the dist files

--- a/billing/settings/.env_test_dist
+++ b/billing/settings/.env_test_dist
@@ -2,7 +2,7 @@ DEBUG=False
 TESTS=True
 TEMPLATE_DEBUG=False
 
-DATABASE_URL=psql://postgres:postgres@127.0.0.1:5432/billing
+DATABASE_URL=psql://billing:billing@127.0.0.1:5432/billing
 
 ADMINS=admin@example.com,manager@example.com
 
