--- a/billing/settings/.env_dist
+++ b/billing/settings/.env_dist
@@ -1,7 +1,7 @@
 DEBUG=True
 TEMPLATE_DEBUG=True
 
-DATABASE_URL=psql://postgres:postgres@127.0.0.1:5432/billing
+DATABASE_URL=psql://billing:billing@127.0.0.1:5432/billing
 
 ADMINS=admin@example.com,manager@example.com
 
