Add the client CORS lib

--- a/billing/settings/.env_test_dist
+++ b/billing/settings/.env_test_dist
@@ -24,7 +24,7 @@ CELERY_EAGER_PROPAGATES_EXCEPTIONS=True
 BROKER_BACKEND=memory
 
 CORS_ORIGIN_ALLOW_ALL=True
-CORS_ORIGIN_REGEX_WHITELIST=
+CORS_ORIGIN_REGEX_WHITELIST=maxi\-booking\.com,maaaxi\.com,maxi\-booking\.ru,maxibooking\.ru
 
 MB_CLIENT_LOGIN_RESTRICTIONS=support,demo,mail,mx,payment,www,new,info,cdn,mb,help,redmine,deploy,trial,_amazonses,billing,maxibooking
 
